bug nav fixed , alignments

--- a/src/styles/Components/_CategoryPage.scss
+++ b/src/styles/Components/_CategoryPage.scss
@@ -23,6 +23,9 @@
 }
 
 .section-description {
-  background: $redLight;
+  background: $grayLight;
   width: 100%;
+  p {
+    padding: 12px;
+  }
 }
