--- a/src/styles/Components/_ProductDescriptionSection.scss
+++ b/src/styles/Components/_ProductDescriptionSection.scss
@@ -1,4 +1,5 @@
 .section-product_description {
+  width: 100%;
   img {
     height: 200px;
     width: 100%;
