--- a/src/styles/Components/_ProductPage.scss
+++ b/src/styles/Components/_ProductPage.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  align-items: center;
 
   h2,
   p,
